# projectdetect-rs

./: Cargo.toml  README.md
.github/workflows/: ci.yml  release.yml
docs/: .gloam-version  gloam.css  gloam.js  index.html
examples/: detect.rs
src/: builtins.rs  cel.rs  config.rs  detect.rs  discovery.rs  error.rs  find.rs  indicator.rs  lib.rs  project_type.rs  registry.rs  resolver.rs
tests/: config.rs  detect.rs  find.rs  resolver.rs
tests/common/: mod.rs
