[package]
name = "projectdetect"
version = "0.1.0"
edition = "2021"
rust-version = "1.79"
license = "MIT"
description = "Detect what kind of project a directory is (Go, Node, Rust, Xcode, …) by canonical indicator files, with recursive discovery, file→project resolution, and custom YAML/CEL types."
repository = "https://github.com/richardwooding/projectdetect-rs"
readme = "README.md"
keywords = ["project", "detection", "monorepo", "filesystem", "polyglot"]
categories = ["development-tools", "filesystem"]

[dependencies]
thiserror = "2"
serde = { version = "1", features = ["derive"] }
serde_norway = "0.9"
glob = "0.3"
ignore = "0.4"
dirs = "6"
once_cell = "1"
cel = { version = "0.13", optional = true }

[features]
default = []
cel = ["dep:cel"]

[dev-dependencies]
tempfile = "3"

[package.metadata.docs.rs]
all-features = true
